test_suite/tests/ui/fail_duplicate_bounds_params.stderr
error: Duplicate `bounds` attributes
 --> tests/ui/fail_duplicate_bounds_params.rs:6:1
  |
6 | #[scale_info(bounds(), bounds())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
